# OmniCore-Discord-Bot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  ROADMAP.md  main.py  requirements.txt
.github/workflows/: docker-publish.yml  rust.yml
cogs/: __init__.py  moderation.py  ollama.py  utils.py
src/: config.rs  database.rs  logging.rs  main.rs  ping.rs  prefix.rs  set_prefix.rs  slash.rs
src/commands/: mod.rs
src/commands/ai/: approve.rs  change_prompt.rs  delete_memory.rs  disapprove.rs  get_prompt.rs  init_ollama.rs  mention.rs  mod.rs  remove_prompt.rs
src/commands/basic_utils/: help.rs  info.rs  mod.rs  ping.rs  prefix.rs
src/commands/moderation/: ban.rs  kick.rs  lock.rs  mod.rs  purge.rs  time.rs  unban.rs  unlock.rs  untime.rs
