[package]
name = "omnicore_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.33"
log4rs = "1.4.0"
mongodb = { version = "3.8.0", features = ["bson-3"] }
once_cell = "1.21.4"
poise = "0.6.2"
tokio = { version = "1.52.3", features = ["full"] }
dotenvy = "0.15.7"
reqwest = { version = "0.13.4", features = ["json"] }
serde_json = "1.0.150"
chrono = "0.4.45"
futures = "0.3.32"
regex = "1.13.1"
